# hiimmichael

./: .gitignore  README.md
AI/: openai_example.py
Assembly/Bubblesort/: bubblesort.asm
Assembly/Hex to Integer Conversion/: hexval-test.asm  hexval.asm  main.asm  toint-test.asm  toint.asm
Assembly/Largest Integer/: largest-integer.asm
Assembly/MIPS/: mips1.asm
Assembly/Matrices/: matrices.asm
Assembly/Quicksort/: quicksort.asm
Batch/: Task Kill.bat  sleep.bat
C#/: Enumeration.cs  FletcherChecksum.cs  FluidUnits.cs  SupportedLanguages.cs  ThreadHelperClass.cs
C#/CSVParseList/: CSVParseList.sln
C#/UTFParser/: UTFParser.sln
C++/Adjacency/: Adjacency.cpp  Adjacency.h
C++/After_Tax_Cost_Calculator/: after_tax_cost_calc.cpp  project5.cpp
C++/Approximate_Pi/: avg_pi_val.cpp  project4.cpp
C++/Array_Set/: ArraySet.cpp  ArraySet.h  Makefile  SetInterface.h  lab2.cpp  main.cpp
C++/Binary_Node_Tree/: BinaryNode.cpp  BinaryNode.h  BinaryNodeTree.cpp  BinaryNodeTree.h  Makefile  NotFoundException.h  main.cpp
C++/Buoyancy_Sphere/: buoyancy.cpp  project3.cpp
C++/CMake - Cross Platform build system/: CMakeLists.txt  class1.cpp  class1.h  test1_main.cpp
C++/CPU_Ray_Tracer/: cpu_ray_tracer.cpp  cpu_ray_tracer.h  cpu_ray_tracer.sln  cpu_ray_tracer.vcproj
C++/Candy_Bar_Calculator/: candy_calc.cpp  project2.cpp
C++/Custom_Array/: CustomArray.cpp  CustomArray.h
C++/Dictionary/: ArrayDictionary.cpp  ArrayDictionary.h  BinaryNode.cpp  BinaryNode.h  BinaryNodeTree.cpp  BinaryNodeTree.h  BinarySearchTree.cpp  BinarySearchTree.h  BinaryTreeInterface.h  DictionaryInterface.h  Entry.cpp  Entry.h  Makefile  NotFoundException.cpp  NotFoundException.h  lz143  lz143-1-lw  main.cpp  output  typescript
C++/Disk_List/: #main.cpp#  Disc.cpp  Disc.h  DiscList.cpp  DiscList.h  LinkedList.h  Makefile  Makefile~  Track.cpp  Track.h
C++/File_Character_Counter/: file_character_counter.cpp  project7.cpp
C++/Floating_Point/: Makefile  isFloatingPoint.cpp  isFloatingPoint.h  main.cpp  output  typescript
C++/Frame_Buffer/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  Vector2D.h  Vector3D.h  main.cpp
C++/Frame_Buffer_Color/: CMakeLists.txt  Color.cpp  Color.h  FrameBuffer.cpp  FrameBuffer.h  README.txt  Vector2D.h  Vector3D.h  main.cpp
C++/Frame_Buffer_Simple/: Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  main.cpp
C++/GLSL_Loading/: TemplateProject.sln  TemplateProject.vcproj  fragmentshader.txt  main.cpp  vertexshader.txt
C++/Hello_World/: hello.cpp
C++/Infix/: DivideByZeroExcep.cpp  DivideByZeroExcep.h  Infix.cpp  Infix.h  LinkedStack.cpp  LinkedStack.h  Makefile  expressions.txt  (+3 more)
C++/OpenGL_Example_1/: CMakeLists.txt
C++/OpenGL_Example_1/OpenGL/: CMakeLists.txt  glfwExample.cpp
C++/OpenGL_Example_1/doc/png++-0.2.5/html/: annotated.html  classes.html  classpng_1_1basic__pixel__buffer-members.html  classpng_1_1consumer-members.html  classpng_1_1def__image__info__holder.html  classpng_1_1detail_1_1allowed__bit__depth_3_011_01_4.html  classpng_1_1detail_1_1const__packed__pixel__proxy-members.html  classpng_1_1detail_1_1const__packed__pixel__proxy.html  classpng_1_1detail_1_1packed__pixel__proxy-members.html  classpng_1_1detail_1_1packed__pixel__proxy.html  classpng_1_1end__info-members.html  classpng_1_1error.html  classpng_1_1image-members.html  classpng_1_1image.html  classpng_1_1image_1_1pixel__consumer-members.html  classpng_1_1image_1_1pixel__generator.html  classpng_1_1image_1_1streaming__impl.html  classpng_1_1image__info-members.html  classpng_1_1image__info.html  classpng_1_1image__info__ref__holder-members.html  classpng_1_1image__info__ref__holder.html  classpng_1_1index__pixel-members.html  classpng_1_1info-members.html  classpng_1_1info__base.html  classpng_1_1io__base-members.html  classpng_1_1packed__gray__pixel-members.html  classpng_1_1packed__gray__pixel.html  classpng_1_1packed__index__pixel-members.html  classpng_1_1packed__pixel.html  classpng_1_1packed__pixel__row-members.html  classpng_1_1packed__pixel__row.html  classpng_1_1pixel__buffer.html  classpng_1_1pixel__buffer_3_01packed__gray__pixel_3_01bits_01_4_01_4.html  classpng_1_1reader-members.html  classpng_1_1reader.html  classpng_1_1row__traits_3_01packed__pixel__row_3_01pixel_01_4_01_4.html  classpng_1_1row__traits_3_01std_1_1vector_3_01pixel_01_4_01_4-members.html  classpng_1_1row__traits_3_01std_1_1vector_3_01pixel_01_4_01_4.html  classpng_1_1writer-members.html  config_8hpp.html  (+77 more)
C++/OpenGL_Example_1/src/: SceneDataContainer.h  Vector3D.h  XMLSceneParser.cpp  XMLSceneParser.h  model_obj.cpp
C++/OpenGL_Example_1/utests/: CMakeLists.txt
C++/OpenGL_Example_2/OpenGL/: #SingleTriangle_ClipCoordinate_Scene.cpp#  CMakeLists.txt  GLSL.cpp  GLSL.h  SingleTriangle_ClipCoordinate_Scene.cpp  SingleTriangle_ClipCoordinate_Scene.cpp~  SingleTriangle_ClipCoordinate_Scene.h  glfwExample  glfwExample.cpp  glfwExample.cpp~
C++/OpenGL_Example_2/OpenGL/Shaders/: fragmentShader_passthrough.glsl  vertexShader_passthrough.glsl
C++/Raytrace/raytrace/: #main.cpp#  CMakeLists.txt
Microsoft Graph API/: ExchangeMailboxAdminToolkit.ps1  Get-AzureADSignInSummary.ps1
Python/: Power_BI_auto_refresh.py  UDP_Receive_Broadcast.py  auto_refresh.py  client.py  client_echo.py  client_file_transfer.py  device_discovery.py  gateway.py  hours_worked.py  http_requests.py  largest_value_entered.py  linux_set_date_time_timezone.py  meal_tax.py  multicast_listener.py  quick_user_input_test.py  sort_database.py  system_log_backup.py  test_ntpd_connection.py  test_reg_match.py  test_regex_match.py  test_server.py  test_set_date_time_timezone.py  whats_my_ip.py  zigbee_listener_server.py
Shell/: detect_client_connections.sh  network_controller.sh
Smart Garden/: smart_garden_sns_example.py
Smart Lamp/: smart_lamp.ino
Smart Planter/: README.md  app.py
Vertical Garden/: Vertical_Garden.ino
Web Scraper Microservice/: example_1.py  example_4.py
Webscraper Microservice/: README.md  example_2.py  example_3.py  test_keys.py
chatgpt5-ui-background-purecss/: index_dark_mode.html  index_light_mode.html
(+678 files in other folders)
