cmake_minimum_required (VERSION 2.8)
project (HOMEWORK2)
add_executable (raytrace algebra.cpp reorient.cpp spheroid.cpp algebra.h cuboid.cpp main.cpp scene.cpp thinring.cpp binary.cpp cylinder.cpp optics.cpp setcompl.cpp torus.cpp block.h debug.cpp planet.cpp setisect.cpp triangle.cpp dodecahedron.cpp planet.h setunion.cpp chessboard.cpp icosahedron.cpp polyhedra.h solid.cpp chessboard.h imager.h sphere.cpp lodepng.cpp lodepng.h)
 
